Now using a Singleton logger, logging methods

--- a/MaurerConsole/App.config
+++ b/MaurerConsole/App.config
@@ -7,11 +7,13 @@
 
       <add key="File.Output" value="primes-output.txt"/>
 
-      <add key="Prime.BitSize" value="2048"/>
+      <add key="Prime.BitSize" value="1024"/>
 
-      <add key="Quantity" value="4"/>
+      <add key="Quantity" value="5"/>
 
-      <add key="ThreadSleep.Duration" value="300"/>
+      <add key="ThreadSleep.Duration" value="100"/>
+
+       <add key="Silent.Mode" value="true"/>
 
     </appSettings>
 </configuration>
