--- a/MaurerConsole/App.config
+++ b/MaurerConsole/App.config
@@ -1,19 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-    <appSettings>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+	</startup>
+	<appSettings>
 
-      <add key="File.Output" value="primes-output.txt"/>
+		<add key="File.Output"		value="primes-output.txt"/>
 
-      <add key="Prime.BitSize" value="1024"/>
+		<add key="Prime.BitSize"	value="1024"/>
 
-      <add key="Quantity" value="5"/>
+		<add key="Quantity"				value="5"/>
 
-      <add key="ThreadSleep.Duration" value="100"/>
+		<add key="ThreadSleep.Duration" value="100"/>
 
-       <add key="Silent.Mode" value="true"/>
+		<add key="Silent.Mode"		value="true"/>
 
-    </appSettings>
+	</appSettings>
 </configuration>
