Code Analysis RuleSet

--- a/AlgorithmLibrary/AlgorithmLibrary.csproj
+++ b/AlgorithmLibrary/AlgorithmLibrary.csproj
@@ -21,8 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>
-    </CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>AlgorithmLibrary.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -47,7 +46,6 @@
   <ItemGroup>
     <Compile Include="Algorithm.cs" />
     <Compile Include="CryptoRandomSingleton.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="LoggerSingleton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThreadedAlgorithmWorker.cs" />
