--- a/MaurerConsole/App.config
+++ b/MaurerConsole/App.config
@@ -5,15 +5,17 @@
 	</startup>
 	<appSettings>
 
-		<add key="File.Output"		value="primes-output.txt"/>
+		<add key="File.Output"		value="512-primes-output002.txt"/>
 
-		<add key="Prime.BitSize"	value="1024"/>
+		<add key="Prime.BitSize"	value="512"/>
 
-		<add key="Quantity"				value="5"/>
+		<add key="Quantity"				value="5000000"/>
 
-		<add key="ThreadSleep.Duration" value="100"/>
+		<add key="ThreadSleep.Duration" value="30"/>
 
 		<add key="Silent.Mode"		value="true"/>
+
+		<add key="Logging.Enabled"		value="false"/>
 
 	</appSettings>
 </configuration>
