Added setting CompositeSearchDepth Improvements to ThreadedAlgorithmWorker Major Winform Project improvements

--- a/MaurerConsole/App.config
+++ b/MaurerConsole/App.config
@@ -5,15 +5,17 @@
 	</startup>
 	<appSettings>
 
-		<add key="File.Output"		value="512-primes-output002.txt"/>
+		<add key="File.Output"			value="512-primes-output002.txt"/>
 
-		<add key="Prime.BitSize"	value="512"/>
+		<add key="Prime.BitSize"		value="512"/>
 
 		<add key="Quantity"				value="5000000"/>
 
-		<add key="ThreadSleep.Duration" value="30"/>
+		<add key="ThreadSleep.Duration" value="200"/>
+		
+		<add key="Search.Depth"			value="6"/>
 
-		<add key="Silent.Mode"		value="true"/>
+		<add key="Silent.Mode"			value="true"/>
 
 		<add key="Logging.Enabled"		value="false"/>
 
