--- a/AlgorithmLibrary/AlgorithmLibrary.csproj
+++ b/AlgorithmLibrary/AlgorithmLibrary.csproj
@@ -47,8 +47,11 @@
     <Compile Include="Algorithm.cs" />
     <Compile Include="CryptoRandomSingleton.cs" />
     <Compile Include="LoggerSingleton.cs" />
+    <Compile Include="MillerRabin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sieve.cs" />
     <Compile Include="ThreadedAlgorithmWorker.cs" />
+    <Compile Include="TrialDivision.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
