Changed logging architecture.

--- a/MaurerConsole/App.config
+++ b/MaurerConsole/App.config
@@ -5,19 +5,19 @@
 	</startup>
 	<appSettings>
 
-		<add key="File.Output"			value="512-primes-output002.txt"/>
+		<add key="File.Output"			value="512-primes-output001.txt"/>
 
 		<add key="Prime.BitSize"		value="512"/>
 
-		<add key="Quantity"				value="5000000"/>
+		<add key="Quantity"				value="1"/>
 
 		<add key="ThreadSleep.Duration" value="150"/>
 		
-		<add key="Search.Depth"			value="15"/>
+		<add key="Search.Depth"			value="1"/>
 
-		<add key="Silent.Mode"			value="true"/>
+		<add key="Verbose.Mode"			value="true"/>
 
-		<add key="Logging.Enabled"		value="false"/>
+		<add key="Logging.Enabled"		value="true"/>
 
 	</appSettings>
 </configuration>
