--- a/AlgorithmLibrary/AlgorithmLibrary.csproj
+++ b/AlgorithmLibrary/AlgorithmLibrary.csproj
@@ -46,7 +46,7 @@
   <ItemGroup>
     <Compile Include="Algorithm.cs" />
     <Compile Include="CryptoRandomSingleton.cs" />
-    <Compile Include="LoggerSingleton.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="MillerRabin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sieve.cs" />
