--- a/MaurerConsole/App.config
+++ b/MaurerConsole/App.config
@@ -9,15 +9,15 @@
 
 		<add key="Prime.BitSize"		value="512"/>
 
-		<add key="Quantity"				value="1"/>
+		<add key="Quantity"				value="10000"/>
 
 		<add key="ThreadSleep.Duration" value="150"/>
 		
-		<add key="Search.Depth"			value="1"/>
+		<add key="Search.Depth"			value="15"/>
 
-		<add key="Verbose.Mode"			value="true"/>
+		<add key="Verbose.Mode"			value="false"/>
 
-		<add key="Logging.Enabled"		value="true"/>
+		<add key="Logging.Enabled"		value="false"/>
 
 	</appSettings>
 </configuration>
