Added Timing Metrics

--- a/MaurerConsole/App.config
+++ b/MaurerConsole/App.config
@@ -3,17 +3,20 @@
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
 	</startup>
-	<appSettings>
+	<appSettings>		
+		<add key="LogFile.Methods"			value="Methods.log.txt"/>
+		<add key="LogFile.Timers"			value="Timers.log.txt"/>
+		<add key="LogFile.Exceptions"		value="Exceptions.log.txt"/>
 
-		<add key="File.Output"			value="512-primes-output001.txt"/>
+		<add key="LogFile.Primes"			value="2048-primes-output001.txt"/>
 
-		<add key="Prime.BitSize"		value="512"/>
+		<add key="Prime.BitSize"		value="2048"/>
 
-		<add key="Quantity"				value="10000"/>
+		<add key="Quantity"				value="3"/>
 
-		<add key="ThreadSleep.Duration" value="150"/>
+		<add key="ThreadSleep.Duration" value="50"/>
 		
-		<add key="Search.Depth"			value="15"/>
+		<add key="Search.Depth"			value="3"/>
 
 		<add key="Verbose.Mode"			value="false"/>
 
