--- a/AlgorithmLibrary/AlgorithmLibrary.csproj
+++ b/AlgorithmLibrary/AlgorithmLibrary.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>AlgorithmLibrary</RootNamespace>
     <AssemblyName>AlgorithmLibrary</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -22,6 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AlgorithmLibrary.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>
     </CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -46,9 +48,7 @@
   <ItemGroup>
     <Compile Include="Algorithm.cs" />
     <Compile Include="CryptoRandomSingleton.cs" />
-    <Compile Include="Fermats.cs" />
     <Compile Include="Log.cs" />
-    <Compile Include="Lucas.cs" />
     <Compile Include="MillerRabin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sieve.cs" />
