Many improvements. Prime finding still hangs for some reason.

--- a/MaurerWinform/app.config
+++ b/MaurerWinform/app.config
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
-	</startup>
-	<appSettings>
-		<add key="Verbose.Mode" value="false"/>
-		<add key="Logging.Enabled" value="false"/>
-
-		<add key="LogFile.Methods" value="Methods.log.txt"/>
-		<add key="LogFile.Timers" value="Timers.log.txt"/>
-		<add key="LogFile.Exceptions" value="Exceptions.log.txt"/>
-		<add key="LogFile.Primes" value="1536-primes-output001.txt"/>
-
-		<add key="Search.Depth" value="4"/>
-		<add key="ThreadSleep.Duration" value="5"/>		
-	</appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
+  <runtime>
+    <gcAllowVeryLargeObjects enabled="true" />
+  </runtime>
+  <appSettings>
+    <add key="Verbose.Mode" value="true" />
+    <add key="Logging.Enabled" value="true" />
+    <add key="LogFile.Methods" value="Methods.log.txt" />
+    <add key="LogFile.Timers" value="Timers.log.txt" />
+    <add key="LogFile.Exceptions" value="Exceptions.log.txt" />
+    <add key="LogFile.Primes" value="1536-primes-output001.txt" />
+    <add key="Search.Depth" value="4" />
+    <add key="ThreadSleep.Duration" value="5" />
+  </appSettings>
 </configuration>
