--- a/MaurerConsole/App.config
+++ b/MaurerConsole/App.config
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
-	</startup>
-	<appSettings>
-		<add key="Verbose.Mode" value="false"/>
-		<add key="Logging.Enabled" value="false"/>
-		
-		<add key="LogFile.Methods" value="Methods.log.txt"/>
-		<add key="LogFile.Timers" value="Timers.log.txt"/>
-		<add key="LogFile.Exceptions" value="Exceptions.log.txt"/>
-		<add key="LogFile.Primes" value="1536-primes-output001.txt"/>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+  </startup>
+  <runtime>
+    <gcAllowVeryLargeObjects enabled="true" />
+  </runtime>
+  <appSettings>
+    <add key="Verbose.Mode" value="true"/>
+    <add key="Logging.Enabled" value="true"/>
 
-		<add key="Prime.BitSize" value="1536"/>
+    <add key="LogFile.Methods" value="Methods.log.txt"/>
+    <add key="LogFile.Timers" value="Timers.log.txt"/>
+    <add key="LogFile.Exceptions" value="Exceptions.log.txt"/>
+    <add key="LogFile.Primes" value="1536-primes-output001.txt"/>
 
-		<add key="Quantity" value="1"/>
-		<add key="Search.Depth" value="1"/>
-		<add key="ThreadSleep.Duration" value="5"/>	
-	</appSettings>
+    <add key="Prime.BitSize" value="1024"/>
+
+    <add key="Quantity" value="1"/>
+    <add key="Search.Depth" value="1"/>
+    <add key="ThreadSleep.Duration" value="5"/>
+  </appSettings>
 </configuration>
