Added new app.config setting: Default.BitSize for Winforms client.

--- a/MaurerWinform/app.config
+++ b/MaurerWinform/app.config
@@ -7,6 +7,7 @@
     <gcAllowVeryLargeObjects enabled="true" />
   </runtime>
   <appSettings>
+		<add key="Default.BitSize" value="1024" />
     <add key="Verbose.Mode" value="true" />
     <add key="Logging.Enabled" value="true" />
     <add key="LogFile.Methods" value="Methods.log.txt" />
